--- a/index.html
+++ b/index.html
@@ -5,72 +5,405 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <!-- Add Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Add Bootstrap Datepicker CSS -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
     <title>Abule Imole Room Booking</title>
 </head>
+<style>
+    .error,
+    .checkbox-error {
+        color: red;
+    }
+</style>
 
 <body>
     <div class="background-wrapper">
         <div class="form-container">
             <form class="contact-form">
                 <h2>Abule Imole Room Booking</h2>
+                <label for="lastname" style="color: #D2691E;">First Name <span style="color: #D2691E;">*</span></label>
                 <div class="form-group">
-                    <input type="text" id="name" required>
-                    <label for="name">First Name</label>
+                    <input type="text" id="name" class="required" name="first_name">
+                    <div class="error"></div>
+                    <input type="hidden" class="today" name="today">
                 </div>
 
-                <div class="form-group">
-                    <input type="text" id="lastname" required>
-                    <label for="lastname">Last Name</label>
-                </div>
+                <label for="lastname" style="color: #D2691E;">Last Name <span style="color: #D2691E;">*</span></label>
 
                 <div class="form-group">
-                    <select id="gender" required>
+                    <input type="text" id="lastname" class="required" name="last_name">
+                    <div class="error"></div>
+                </div>
+
+                <label for="lastname" style="color: #D2691E;">Gender <span style="color: #D2691E;">*</span></label>
+                <div class="form-group">
+                    <select id="gender" class="required" name="gender">
                         <option value="" disabled selected>Select Gender</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                     </select>
+                    <div class="error"></div>
                 </div>
+
+                <label for="lastname" style="color: #D2691E;">Email Address<span
+                        style="color: #D2691E;">*</span></label>
 
                 <div class="form-group">
-                    <input type="email" id="email" required>
-                    <label for="email">Email Address</label>
+                    <input type="email" id="email" class="required email" name="email">
+                    <div class="error"></div>
                 </div>
+
+                <label for="lastname" style="color: #D2691E;">Contact Number <span
+                        style="color: #D2691E;">*</span></label>
 
                 <div class="form-group">
-                    <input type="tel" id="phone" required>
-                    <label for="phone">Contact Number</label>
+                    <input type="tel" id="phone" class="required" name="phone">
+                    <div class="error"></div>
                 </div>
 
+                <label for="lastname" style="color: #D2691E;">Address <span style="color: #D2691E;">*</span></label>
                 <div class="form-group">
-                    <input type="text" id="address" required>
-                    <label for="address">Address</label>
+                    <input type="text" id="address" class="required" name="address">
+                    <div class="error"></div>
                 </div>
 
+                <label for="lastname" style="color: #D2691E;">Country of Residence <span
+                        style="color: #D2691E;">*</span></label>
                 <div class="form-group">
-                    <input type="text" id="country" required>
-                    <label for="country">Country of Residence</label>
+                    <input type="text" id="country" class="required" name="country" placeholder="e.g Nigeria">
+                    <div class="error"></div>
                 </div>
 
-                <p style="margin-bottom: 2%;">If arriving by train to Moniya, would you like to be picked up from the
+                <label style="color: #D2691E;margin-left: 0.7rem;">Arrival Date <span
+                        style="color: #D2691E;">*</span></label>
+                <div class="form-group">
+                    <input type="text" id="arrival_date" class="datepicker required" autocomplete="off" readonly
+                        name="arrival_date">
+                    <div class="error"></div>
+                </div>
+
+                <label style="color: #D2691E;margin-left: 0.7rem;">Departure Date <span
+                        style="color: #D2691E;">*</span></label>
+                <div class="form-group">
+                    <input type="text" id="departure_date" class="datepicker required" autocomplete="off" readonly
+                        name="departure_date">
+                    <div class="error"></div>
+                </div>
+
+                <div class="meals-section">
+                    <p class="meals-title">Please select meals to be included in your booking:</p>
+                    <div class="custom-checkbox">
+                        <input type="checkbox" id="breakfast" class="meal-checkbox" value="breakfast" name="meals">
+                        <label for="breakfast">Breakfast</label>
+                    </div>
+                    <div class="custom-checkbox">
+                        <input type="checkbox" id="lunch" class="meal-checkbox" value="lunch" name="meals">
+                        <label for="lunch">Lunch</label>
+                    </div>
+                    <div class="custom-checkbox">
+                        <input type="checkbox" id="dinner" class="meal-checkbox" value="dinner" name="meals">
+                        <label for="dinner">Dinner</label>
+                    </div>
+                    <div class="custom-checkbox">
+                        <input type="checkbox" id="no_meals" class="meal-checkbox" value="No meals" name="meals">
+                        <label for="no_meals">Don't include any meals</label>
+                    </div>
+
+                    <div class="checkbox-error"></div>
+                </div>
+
+                <p style="color: #D2691E; margin-bottom: 0.5rem !important;margin-left: 0.7rem;">If arriving by train to
+                    Moniya, would you
+                    like to be picked
+                    up from the
                     train
-                    station?</p>
+                    station? <span style="color: #D2691E;">*</span></p>
                 <div class="form-group">
-                    <select id="train" required>
+                    <select id="train" class="required" name="train">
+                        <option value="" disabled selected>Select Option</option>
                         <option value="yes">Yes</option>
                         <option value="no">No</option>
                     </select>
+                    <div class="error"></div>
                 </div>
 
 
                 <div class="form-group price-box">
                     <label class="price-label">Total Price</label>
-                    <input type="text" id="price" value="$0.00" readonly>
+                    <input type="text" id="price" value="₦0.00" readonly name="price">
                 </div>
 
-                <button type="submit">Confirm Booking</button>
+                <button type="button" id="confirm-booking">Confirm Booking</button>
             </form>
         </div>
     </div>
+
+    <!-- Add this right after the opening body tag -->
+    <div class="loader-wrapper">
+        <div class="loader-content">
+            <div class="hotel-loader">
+                <div class="hotel">
+                    <div class="loading-text">Loading...</div>
+                    <div class="bed">
+                        <div class="pillow"></div>
+                        <div class="blanket"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add these scripts before closing body tag -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+    <script>
+        var breakfast_price = 0, lunch_price = 0, dinner_price = 0, train_price = 0, room_price = 0;
+        $(document).ready(function () {
+            // Show loader initially
+            $('.loader-wrapper').show();
+
+            // Hide form container initially
+            $('.form-container').hide();
+
+            $('.datepicker').datepicker({
+                format: 'dd/mm/yyyy',
+                autoclose: true,
+                startDate: new Date(new Date()),
+                todayHighlight: true,
+                orientation: 'bottom auto',
+                container: '.form-container'
+            });
+            var d = new Date();
+            $('.today').val(addZero(d.getDate()) + '/' + addZero(d.getMonth() + 1) + '/' + d.getFullYear());
+            // Add this to hide loader and show form after AJAX
+            $.get('https://script.google.com/macros/s/AKfycbwbGTn5ysDa0eK4Mgy7f1s1sa--daQUIBWKLej0k7OB6UWXfZxuYop2NT6Fgnn0iqWX/exec', function (response) {
+                var prices = response.prices;
+
+                prices.forEach(function (price) {
+                    if (price[0].trim().toLowerCase().includes('breakfast')) {
+                        breakfast_price = price[1];
+                    }
+                    if (price[0].trim().toLowerCase().includes('lunch')) {
+                        lunch_price = price[1];
+                    }
+                    if (price[0].trim().toLowerCase().includes('dinner')) {
+                        dinner_price = price[1];
+                    }
+                    if (price[0].trim().toLowerCase().includes('train')) {
+                        train_price = price[1];
+                    }
+                    if (price[0].trim().toLowerCase().includes('room')) {
+                        room_price = price[1];
+                    }
+                });
+
+                $('.loader-wrapper').fadeOut('slow');
+                $('.form-container').fadeIn('slow');
+            });
+
+            // Handle "Don't include any meals" checkbox
+            $('#no_meals').change(function () {
+                if ($(this).is(':checked')) {
+                    $('#breakfast, #lunch, #dinner').prop('checked', false);
+                } else {
+                    $('#breakfast, #lunch, #dinner').prop('disabled', false);
+                }
+            });
+
+            // Handle other meal checkboxes
+            $('#breakfast, #lunch, #dinner').change(function () {
+                if ($('#breakfast:checked, #lunch:checked, #dinner:checked').length > 0) {
+                    $('#no_meals').prop('checked', false);
+                }
+            });
+        });
+
+        $(document).on('click', '#confirm-booking', function () {
+            if (validate()) {
+                var form = $(".contact-form");
+
+                $('#confirm-booking').attr('disabled', 'disabled');
+                $('#confirm-booking').text('Please wait...');
+
+                var url_gsheet = "https://script.google.com/macros/s/AKfycbwbGTn5ysDa0eK4Mgy7f1s1sa--daQUIBWKLej0k7OB6UWXfZxuYop2NT6Fgnn0iqWX/exec";
+                $.ajax({
+                    type: "POST",
+                    url: url_gsheet,
+                    data: $(form).serialize(),
+                    success: function (response) {
+                        if (response.result == "success") {
+                            swal({
+                                title: "Booking Confirmed",
+                                text: "Please Check Email For Invoice",
+                                icon: "success",
+                            })
+                            $('#confirm-booking').removeAttr('disabled');
+                            $('#confirm-booking').text('Submit Again');
+                            //     .then(function () {
+                            //         window.location = window.location.href;
+                            //     });
+                            // setTimeout(function () {
+                            //     window.location = window.location.href;
+                            // }, 3000);
+                        } else {
+                            swal({
+                                title: "Error!",
+                                text: response.error,
+                                icon: "error",
+                            }).then(function () {
+                                $('#confirm-booking').removeAttr('disabled');
+                                $('#confirm-booking').text('Submit Again');
+                            });
+                        }
+                    },
+                    error: function (response) {
+                        swal({
+                            title: "Error!",
+                            text: "Something went wrong",
+                            icon: "error",
+                        }).then(function () {
+                            $('#confirm-booking').removeAttr('disabled');
+                            $('#confirm-booking').text('Submit Again');
+                        });
+                    }
+                });
+            }
+        });
+
+        $(document).on('change', '.datepicker', function () {
+            var arrivalDate = $('#arrival_date').val();
+            var departureDate = $('#departure_date').val();
+
+            $('#departure_date').closest('.form-group').find('.error').empty();
+            if (arrivalDate != "" && departureDate != "") {
+                if (!validateDates(arrivalDate, departureDate)) {
+                    $('#departure_date').closest('.form-group').find('.error').append('Departure date must be after arrival date');
+                    $('#departure_date').val('');
+                }
+                else {
+                    calculateTotalPrice();
+                }
+            }
+        })
+
+        function validateDates(arrivalDateStr, departureDateStr) {
+            // Split the date strings into day, month, and year
+            const [arrivalDay, arrivalMonth, arrivalYear] = arrivalDateStr.split('/').map(Number);
+            const [departureDay, departureMonth, departureYear] = departureDateStr.split('/').map(Number);
+
+            // Create Date objects
+            const arrivalDate = new Date(arrivalYear, arrivalMonth - 1, arrivalDay); // Month is 0-based in JS
+            const departureDate = new Date(departureYear, departureMonth - 1, departureDay);
+
+            // Check if arrival date is before or on the same day as departure date
+            return arrivalDate <= departureDate;
+        }
+
+        function validate() {
+            var valid = true;
+            $('.error, .checkbox-error').empty();
+
+            $(".required:visible").each(function () {
+                if ($(this).val() == "" || $(this).val() == null) {
+                    $(this).closest("div").find('div.error').append('This field is required');
+                    valid = false;
+                }
+            });
+            $(".email:visible").each(function () {
+                var emailReg = /^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/
+                email_check = emailReg.test($(this).val())
+                if (email_check == false) {
+                    $(this).closest("div").find('.error').append('Invalid email format</div>');
+                    valid = false;
+                }
+            })
+
+            if ($('.meal-checkbox:checked').length < 1) {
+                $('.checkbox-error').append('Please pick one option')
+                valid = false;
+            }
+
+
+
+            if (!valid) {
+                $("html, body").animate(
+                    {
+                        scrollTop: $("div.error:first").offset().top - 80,
+                    },
+                    100
+                );
+            }
+            return valid;
+        }
+
+        $(document).on('change', 'input[type="checkbox"]', function () {
+            calculateTotalPrice();
+        })
+
+        $(document).on('change', '#train', function () {
+            calculateTotalPrice();
+        })
+
+        function calculateTotalPrice() {
+            var total_price = 0;
+
+            $('.meal-checkbox:checked').each(function () {
+                if ($(this).val() == 'breakfast') {
+                    total_price += parseFloat(breakfast_price);
+                }
+                if ($(this).val() == 'lunch') {
+                    total_price += parseFloat(lunch_price);
+                }
+                if ($(this).val() == 'dinner') {
+                    total_price += parseFloat(dinner_price);
+                }
+            })
+
+            var train_pickup = $('#train').find(":selected").val();
+            if (train_pickup == 'yes') {
+                total_price += parseFloat(train_price);
+            }
+
+            var arrivalDate = $('#arrival_date').val();
+            var departureDate = $('#departure_date').val();
+
+            var numberOfDays = calculateNumberOfDays(arrivalDate, departureDate);
+
+            total_price += parseFloat(room_price) * (numberOfDays + 1);
+
+            $('#price').val('₦' + total_price.toFixed(2));
+        }
+
+        function calculateNumberOfDays(arrivalDateStr, departureDateStr) {
+            // Split the date strings into day, month, and year
+            const [arrivalDay, arrivalMonth, arrivalYear] = arrivalDateStr.split('/').map(Number);
+            const [departureDay, departureMonth, departureYear] = departureDateStr.split('/').map(Number);
+
+            // Create Date objects
+            const arrivalDate = new Date(arrivalYear, arrivalMonth - 1, arrivalDay); // Month is 0-based in JS
+            const departureDate = new Date(departureYear, departureMonth - 1, departureDay);
+
+            // Calculate the difference in milliseconds
+            const timeDifference = departureDate - arrivalDate;
+
+            // Convert milliseconds to days
+            const daysDifference = Math.ceil(timeDifference / (1000 * 60 * 60 * 24));
+
+            return daysDifference;
+        }
+
+        function addZero(value) {
+            return value < 10 ? '0' + value : value;
+        }
+
+    </script>
 </body>
 
 </html>
