--- a/index.html
+++ b/index.html
@@ -24,21 +24,26 @@
         <div class="form-container">
             <form class="contact-form">
                 <h2>Abule Imole Room Booking</h2>
-                <label for="lastname" style="color: #D2691E;">First Name <span style="color: #D2691E;">*</span></label>
+                <label for="lastname" style="color: #9202a3;">First Name <span style="color: #9202a3;">*</span></label>
                 <div class="form-group">
                     <input type="text" id="name" class="required" name="first_name">
                     <div class="error"></div>
                     <input type="hidden" class="today" name="today">
+                    <input type="hidden" class="order-ref" name="order_ref">
+                    <input type="hidden" class="qty" name="qty">
+                    <input type="hidden" class="room_price" name="room_price">
+                    <input type="hidden" class="meal_price" name="meal_price">
+                    <input type="hidden" class="train_price" name="train_price">
                 </div>
 
-                <label for="lastname" style="color: #D2691E;">Last Name <span style="color: #D2691E;">*</span></label>
+                <label for="lastname" style="color: #9202a3;">Last Name <span style="color: #9202a3;">*</span></label>
 
                 <div class="form-group">
                     <input type="text" id="lastname" class="required" name="last_name">
                     <div class="error"></div>
                 </div>
 
-                <label for="lastname" style="color: #D2691E;">Gender <span style="color: #D2691E;">*</span></label>
+                <label for="lastname" style="color: #9202a3;">Gender <span style="color: #9202a3;">*</span></label>
                 <div class="form-group">
                     <select id="gender" class="required" name="gender">
                         <option value="" disabled selected>Select Gender</option>
@@ -48,45 +53,45 @@
                     <div class="error"></div>
                 </div>
 
-                <label for="lastname" style="color: #D2691E;">Email Address<span
-                        style="color: #D2691E;">*</span></label>
+                <label for="lastname" style="color: #9202a3;">Email Address<span
+                        style="color: #9202a3;">*</span></label>
 
                 <div class="form-group">
                     <input type="email" id="email" class="required email" name="email">
                     <div class="error"></div>
                 </div>
 
-                <label for="lastname" style="color: #D2691E;">Contact Number <span
-                        style="color: #D2691E;">*</span></label>
+                <label for="lastname" style="color: #9202a3;">Contact Number <span
+                        style="color: #9202a3;">*</span></label>
 
                 <div class="form-group">
                     <input type="tel" id="phone" class="required" name="phone">
                     <div class="error"></div>
                 </div>
 
-                <label for="lastname" style="color: #D2691E;">Address <span style="color: #D2691E;">*</span></label>
+                <label for="lastname" style="color: #9202a3;">Address <span style="color: #9202a3;">*</span></label>
                 <div class="form-group">
                     <input type="text" id="address" class="required" name="address">
                     <div class="error"></div>
                 </div>
 
-                <label for="lastname" style="color: #D2691E;">Country of Residence <span
-                        style="color: #D2691E;">*</span></label>
+                <label for="lastname" style="color: #9202a3;">Country of Residence <span
+                        style="color: #9202a3;">*</span></label>
                 <div class="form-group">
                     <input type="text" id="country" class="required" name="country" placeholder="e.g Nigeria">
                     <div class="error"></div>
                 </div>
 
-                <label style="color: #D2691E;margin-left: 0.7rem;">Arrival Date <span
-                        style="color: #D2691E;">*</span></label>
+                <label style="color: #9202a3;margin-left: 0.7rem;">Arrival Date <span
+                        style="color: #9202a3;">*</span></label>
                 <div class="form-group">
                     <input type="text" id="arrival_date" class="datepicker required" autocomplete="off" readonly
                         name="arrival_date">
                     <div class="error"></div>
                 </div>
 
-                <label style="color: #D2691E;margin-left: 0.7rem;">Departure Date <span
-                        style="color: #D2691E;">*</span></label>
+                <label style="color: #9202a3;margin-left: 0.7rem;">Departure Date <span
+                        style="color: #9202a3;">*</span></label>
                 <div class="form-group">
                     <input type="text" id="departure_date" class="datepicker required" autocomplete="off" readonly
                         name="departure_date">
@@ -115,12 +120,12 @@
                     <div class="checkbox-error"></div>
                 </div>
 
-                <p style="color: #D2691E; margin-bottom: 0.5rem !important;margin-left: 0.7rem;">If arriving by train to
+                <p style="color: #9202a3; margin-bottom: 0.5rem !important;margin-left: 0.7rem;">If arriving by train to
                     Moniya, would you
                     like to be picked
                     up from the
                     train
-                    station? <span style="color: #D2691E;">*</span></p>
+                    station? <span style="color: #9202a3;">*</span></p>
                 <div class="form-group">
                     <select id="train" class="required" name="train">
                         <option value="" disabled selected>Select Option</option>
@@ -144,13 +149,10 @@
     <!-- Add this right after the opening body tag -->
     <div class="loader-wrapper">
         <div class="loader-content">
-            <div class="hotel-loader">
-                <div class="hotel">
-                    <div class="loading-text">Loading...</div>
-                    <div class="bed">
-                        <div class="pillow"></div>
-                        <div class="blanket"></div>
-                    </div>
+            <div class="spinner">
+                <div class="spinner-inner">
+                    <div class="spinner-circle"></div>
+                    <div class="loading-text"></div>
                 </div>
             </div>
         </div>
@@ -182,6 +184,7 @@
             });
             var d = new Date();
             $('.today').val(addZero(d.getDate()) + '/' + addZero(d.getMonth() + 1) + '/' + d.getFullYear());
+            $('.order-ref').val(d.getFullYear().toString().substr(-2) + '' + addZero(d.getDate()) + '' + addZero(d.getMonth() + 1) + '' + addZero(d.getHours()) + '' + addZero(d.getMinutes()) + '' + addZero(d.getSeconds()))
             // Add this to hide loader and show form after AJAX
             $.get('https://script.google.com/macros/s/AKfycbwbGTn5ysDa0eK4Mgy7f1s1sa--daQUIBWKLej0k7OB6UWXfZxuYop2NT6Fgnn0iqWX/exec', function (response) {
                 var prices = response.prices;
@@ -244,14 +247,14 @@
                                 text: "Please Check Email For Invoice",
                                 icon: "success",
                             })
-                            $('#confirm-booking').removeAttr('disabled');
-                            $('#confirm-booking').text('Submit Again');
-                            //     .then(function () {
-                            //         window.location = window.location.href;
-                            //     });
-                            // setTimeout(function () {
-                            //     window.location = window.location.href;
-                            // }, 3000);
+                                // $('#confirm-booking').removeAttr('disabled');
+                                // $('#confirm-booking').text('Submit Again');
+                                .then(function () {
+                                    window.location = window.location.href;
+                                });
+                            setTimeout(function () {
+                                window.location = window.location.href;
+                            }, 3000);
                         } else {
                             swal({
                                 title: "Error!",
@@ -352,23 +355,25 @@
         })
 
         function calculateTotalPrice() {
-            var total_price = 0;
+            var total_price = 0, meal_price = 0;
 
             $('.meal-checkbox:checked').each(function () {
                 if ($(this).val() == 'breakfast') {
-                    total_price += parseFloat(breakfast_price);
+                    meal_price += parseFloat(breakfast_price);
                 }
                 if ($(this).val() == 'lunch') {
-                    total_price += parseFloat(lunch_price);
+                    meal_price += parseFloat(lunch_price);
                 }
                 if ($(this).val() == 'dinner') {
-                    total_price += parseFloat(dinner_price);
+                    meal_price += parseFloat(dinner_price);
                 }
+                $('.meal_price').val(meal_price);
             })
 
             var train_pickup = $('#train').find(":selected").val();
             if (train_pickup == 'yes') {
                 total_price += parseFloat(train_price);
+                $('.train_price').val(train_price);
             }
 
             var arrivalDate = $('#arrival_date').val();
@@ -377,8 +382,14 @@
             if (arrivalDate !== "" && departureDate !== "") {
 
                 var numberOfDays = calculateNumberOfDays(arrivalDate, departureDate);
+                $('.qty').val(numberOfDays + 1);
 
                 total_price += parseFloat(room_price) * (numberOfDays + 1);
+                total_price += parseFloat(meal_price) * (numberOfDays + 1);
+                $('.room_price').val(room_price);
+            }
+            else {
+                total_price += parseFloat(meal_price);
             }
 
             $('#price').val('₦' + total_price.toFixed(2));
